# ML_final_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
.pytest_cache/v/cache/: nodeids
configs/: sp500.yaml  sp500_2009_2023_fixed_test.yaml  sp500_2011_2026.yaml  sp500_downtrend_probe.yaml
data/raw/: README.md  sp500_investing.csv  sp500_yahoo.csv
outputs/smoke/: best_params_high.json  component_predictions_high.csv  decomposition_fit_components_high.csv  decomposition_fit_high.npz  decomposition_high.npz  predictions_high.csv  summary_high.json  synthetic_sp500_like.csv  validation_predictions_high.csv
outputs/sp500/: best_params_high.json  component_predictions_high.csv  component_predictions_low.csv  decomposition_fit_components_high.csv  decomposition_fit_components_low.csv  decomposition_fit_high.npz  decomposition_fit_low.npz  decomposition_high.npz  decomposition_low.npz  predictions_high.csv  predictions_low.csv  summary_high.json  summary_low.json  validation_predictions_high.csv  validation_predictions_low.csv
reports/: change_decision_log.md  method_evolution_log.md  project_architecture.md
reports/architecture/: latest_program_architecture.md
src/sp500_forecast/: __init__.py  cli.py  config.py  conformal.py  data.py  decomposition.py  features.py  metrics.py  model.py  pipeline.py  preprocessing.py  training.py
src/sp500_iceemdan_bilstm_sam_tcn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_config_data.py  test_conformal.py  test_features.py  test_model.py  test_pipeline.py  test_preprocessing_features.py
(+8 files in other folders)
